# Livz

./: .gitignore  CMakeLists.txt  DOC.md  LICENSE.txt  LITOUCH.md  README.md
LiTouch/config/: action_template.py  default.json  layout_template.json
LiTouch/scripts/: components.py  event.py  gol.py  handle.py  input.py  interface.py  main.py  painter.py  ros_interface.py  utils.py
examples/src/example/: CMakeLists.txt  package.xml
examples/src/example/config/: rviz.rviz  touch_action.py  touch_layout.json
examples/src/example/launch/: run_demo.launch
examples/src/example/src/: demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  main.cpp
include/: livz.hpp  livz_animate.hpp
src/: livz.cpp  livz_animate.cpp
